components/servicemesh/bookinfo/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  wildcardPolicy: None
